--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
-<header>
+<head>
 	<title>
 		1ère unité scoute
 	</title>
-</header>
+	<link href="style.css" type="text/css" rel="stylesheet">
+</head>
 
 <body>
 	Hello World !
