--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
 
 <body>
 	<div class="topMenu">
-		<a href="baladins">Baladins</a>
-		<a href="Eclaireurs">Éclaireurs</a>
+		<a href="index.html" class="button">Page d'accuil</a>
+		<a href="baladins.html" class="button">Baladins</a>
+		<a href="louvetaux.html" class="button">Louveteaux</a>
+		<a href="eclaireurs.html" class="button">Éclaireurs</a>
+		<a href="pionniers.html" class="button">Pionniers</a>
 	</div>
 
 	<div class="corps">
-		
+
 
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis mauris posuere lectus posuere pharetra. Mauris sed quam et risus gravida eleifend. Sed dictum posuere sem sit amet accumsan. Etiam nulla sem, porttitor quis augue at, aliquam sagittis ex. Aliquam ullamcorper consectetur dolor, fringilla vulputate nibh egestas id. Ut a ligula ligula. Aliquam eu fringilla tellus. Etiam id metus ex. Fusce non facilisis velit. Aenean sed risus tellus. Nam sed auctor quam. Duis sodales sollicitudin risus quis tempor. Etiam cursus, massa et malesuada posuere, quam dui viverra eros, a semper sapien dolor non purus. Maecenas non leo neque. Vivamus fringilla, est varius gravida venenatis, dolor magna ullamcorper urna, molestie aliquam nisl lectus vel tellus. Sed sollicitudin augue diam, non fermentum tortor tristique eget.
 
