--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 	<div class="topMenu">
-		<a href="index.html" class="button">Page d'accuil</a>
+		<a href="index.html" class="button">Page d'accueil</a>
 		<a href="baladins.html" class="button">Baladins</a>
 		<a href="louvetaux.html" class="button">Louveteaux</a>
 		<a href="eclaireurs.html" class="button">Éclaireurs</a>
