--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 		<a href="louvetaux.html" class="button">Louveteaux</a>
 		<a href="eclaireurs.html" class="button">Éclaireurs</a>
 		<a href="pionniers.html" class="button">Pionniers</a>
+		<a href="contact.html" class="button">Contact</a>
 	</div>
 
 	<div class="corps">
