--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 </head>
 
 <body>
-	<div class="nav">
+	<nav>
 		<a href="index.html" class="button">Page d'accueil</a>
 		<a href="baladins.html" class="button">Baladins</a>
 		<a href="louvetaux.html" class="button">Louveteaux</a>
 		<a href="eclaireurs.html" class="button">Éclaireurs</a>
 		<a href="pionniers.html" class="button">Pionniers</a>
 		<a href="contact.html" class="button">Contact</a>
-	</div>
+	</nav>
 
 	<h1 class="titre">Page d'accueil</h1>
 
@@ -32,9 +32,9 @@
 		Cras quis porta mauris. Pellentesque cursus congue dignissim. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Proin sed mi hendrerit, finibus dolor non, ultricies nunc. Suspendisse potenti. Sed ex nisl, imperdiet sit amet arcu ac, pretium tincidunt magna. Fusce quis ornare urna. Curabitur rutrum massa augue, id pharetra nisl feugiat ac. Nam consectetur dui sed purus dapibus malesuada. Suspendisse at pellentesque sem, et blandit lectus. Vivamus a tincidunt nulla. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed orci lacus, volutpat eget porttitor sit amet, pellentesque ut sapien. Ut fringilla enim nec tincidunt blandit. Nullam at odio gravida eros fringilla pretium. In ullamcorper, nulla sit amet blandit pulvinar, diam mi porta augue, sit amet finibus tellus odio in ante.<br> 
 	</div>
 
-	<div class="footnote">
+	<footer>
 		<a href="mailto:jeanvanneste@gmail.com">Contact webm@aster</a>
-	</div>
+	</footer>
 </body>
 
 </html>
