Création pages sections

--- a/eclaireurs.html
+++ b/eclaireurs.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Baladins</title>
+	<title>Éclaireurs</title>
 	<meta charset="UTF-8">
 	<link href="style.css" type="text/css" rel="stylesheet">
 </head>
 
 <body>
-
-
 	<nav>
 		<a href="index.html" class="button">Page d'accueil</a>
 		<a href="baladins.html" class="button">Baladins</a>
@@ -18,10 +16,10 @@
 		<a href="contact.html" class="button">Contact</a>
 	</nav>
 
-	<h1 class="titre">Baladins</h1>
+	<h1 class="titre">Éclaireurs</h1>
 
 	<div class="corps">
-		
+
 	</div>
 
 	<footer>
