--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<nav>
 		<a href="index.html" class="button">Page d'accueil</a>
 		<a href="baladins.html" class="button">Baladins</a>
-		<a href="louvetaux.html" class="button">Louveteaux</a>
+		<a href="louveteaux.html" class="button">Louveteaux</a>
 		<a href="eclaireurs.html" class="button">Éclaireurs</a>
 		<a href="pionniers.html" class="button">Pionniers</a>
 		<a href="contact.html" class="button">Contact</a>
