--- a/louveteaux.html
+++ b/louveteaux.html
@@ -16,7 +16,7 @@
 		<a href="contact.html" class="button">Contact</a>
 	</nav>
 
-	<h1 class="titre">Louvetaux</h1>
+	<h1 class="titre">Louveteaux</h1>
 
 	<div class="corps">
 
