--- a/baladins.html
+++ b/baladins.html
@@ -21,7 +21,9 @@
 	<h1 class="titre">Baladins</h1>
 
 	<div class="corps">
-		<a href="programmes/louveteaux.pdf">Programme</a>		
+		<div class="lienProgrammme">
+			<a href="programmes/louveteaux.pdf">Programme</a>
+		</div>	
 	</div>
 
 	<footer>
