--- a/baladins.html
+++ b/baladins.html
@@ -8,7 +8,6 @@
 
 <body>
 
-
 	<nav>
 		<a href="index.html" class="button">Page d'accueil</a>
 		<a href="baladins.html" class="button">Baladins</a>
@@ -20,6 +19,16 @@
 
 	<h1 class="titre">Baladins</h1>
 	<div class="corps">
+		<h3>
+			Dates clés
+		</h3>
+		<p>
+			Camp de Pâques : 3 au 6 avril (clôture des inscriptions le 30 mars) <br>
+			Grand camp : ???
+		</p>
+		<div class="lienProgramme">
+			<a href="programmes/baladins.pdf">Programme</a>
+		</div>
 	</div>
 
 	<footer>
