--- a/contact.html
+++ b/contact.html
@@ -18,6 +18,16 @@
 
 	<h1 class="titre">Nous contacter</h1>
 
+	<h3>
+		Staff d'Unité : <a href="mailto:chefsdu1er@gmail.com">chefsdu1er@gmail.com</a><br>
+		Staff Baladins : <br>
+		Staff Louveteaux :<br>
+		Staff éclaireurs : <br>
+		Staff pionniers : <br>
+
+		Merci de vous référer aux différents programmes pour les numéros de téléphone.
+	</h3>
+
 	<div class="corps">
 
 	</div>
