--- a/eclaireurs.html
+++ b/eclaireurs.html
@@ -17,8 +17,18 @@
 	</nav>
 
 	<h1 class="titre">Éclaireurs</h1>
+	
 
 	<div class="corps">
+		<h3>
+			Dates clés :
+		</h3>
+		<p>
+			Camps de Pâques : 2 au 6 avril (Clôture des inscriptions le 30 mars) <br>
+			BeScouts : 21 avril <br>
+			Dernière réunion : 6 mai <br>
+			Grand camp : 29 juin au 11 juillet (à confirmer)<br>
+		</p>
 
 	</div>
 
