--- a/louveteaux.html
+++ b/louveteaux.html
@@ -19,6 +19,16 @@
 	<h1 class="titre">Louveteaux</h1>
 
 	<div class="corps">
+
+		<h3>
+			Dates clés :
+		</h3>
+		<p>
+			Camps de Pâques : 2 au 6 avril (Clôture des inscriptions le 30 mars) <br>
+			BeScouts : 21 avril <br>
+			Grand camp : 30 juin au 8 juillet <br>
+		</p>
+		
 		<div class="lienProgramme">
 			<a href="programmes/louveteaux.pdf">Programme</a>
 		</div>
