--- a/pionniers.html
+++ b/pionniers.html
@@ -19,6 +19,20 @@
 	<h1 class="titre">Pionniers</h1>
 
 	<div class="corps">
+		<h2>
+			Dates clefs 2017-2018
+		</h2>
+		<p>
+			Camp de Pâques : 3 au 6 avril <br>
+			BeScouts : 21 avril <br>
+		</p>
+		<p>
+			Soirée Ibiza :
+		</p>
+		<p>
+			Camps Roumanie : 
+		</p>
+
 
 	</div>
 
