--- a/baladins.html
+++ b/baladins.html
@@ -27,7 +27,7 @@
 			Grand camp : ???
 		</p>
 		<div class="lienProgramme">
-			<a href="programmes/baladins.pdf">Programme</a>
+			<a href="programmes/baladins.jpg" target="_blank">Programme</a>
 		</div>
 	</div>
 
