maj mails + programmes

--- a/contact.html
+++ b/contact.html
@@ -16,19 +16,21 @@
 		<a href="contact.html" class="button">Contact</a>
 	</nav>
 
-	<h1 class="titre">Nous contacter</h1>
+	
+
+	<div class="corps">
+		<h1 class="titre">Nous contacter</h1>
 
 	<h3>
 		Staff d'Unité : <a href="mailto:chefsdu1er@gmail.com">chefsdu1er@gmail.com</a><br>
 		Staff Baladins : <br>
-		Staff Louveteaux :<br>
+		Staff Louveteaux :<a href="mailto:louvetauxmo001@gmail.com">louvetauxmo001@gmail.com</a><br>
 		Staff éclaireurs : <br>
-		Staff pionniers : <br>
-
+		Staff pionniers : <a href="mailto:chefsdu1er@gmail.com"> staff.pionnier.7700@gmail.com </a><br>
+	</h3>
+	<h3>
 		Merci de vous référer aux différents programmes pour les numéros de téléphone.
 	</h3>
-
-	<div class="corps">
 
 	</div>
 
