--- a/eclaireurs.html
+++ b/eclaireurs.html
@@ -29,6 +29,9 @@
 			Dernière réunion : 6 mai <br>
 			Grand camp : 29 juin au 11 juillet (à confirmer)<br>
 		</p>
+		<div class="lienProgramme">
+			<a href="programmes/eclaireurs.pdf" target="_blank">Programme</a>
+		</div>
 
 	</div>
 
