--- a/louveteaux.html
+++ b/louveteaux.html
@@ -30,7 +30,7 @@
 		</p>
 		
 		<div class="lienProgramme">
-			<a href="programmes/louveteaux.pdf">Programme</a>
+			<a href="programmes/louveteaux.pdf" target="_blank">Programme</a>
 		</div>
 	</div>
 
