--- a/pionniers.html
+++ b/pionniers.html
@@ -27,10 +27,10 @@
 			BeScouts : 21 avril <br>
 		</p>
 		<p>
-			Soirée Ibiza :
+			Soirée Ibiza : 23 juin
 		</p>
 		<p>
-			Camp Roumanie : 
+			Camp Roumanie : 17 au 31 juillet
 		</p>
 
 
