--- a/contact.html
+++ b/contact.html
@@ -22,10 +22,10 @@
 		<h1 class="titre">Nous contacter</h1>
 
 	<h3>
-		Staff d'Unité : <a href="mailto:chefsdu1er@gmail.com">chefsdu1er@gmail.com</a><br>
-		Staff Baladins : <br>
-		Staff Louveteaux :<a href="mailto:louvetauxmo001@gmail.com">louvetauxmo001@gmail.com</a><br>
-		Staff éclaireurs : <br>
+		Staff d'unité : <a href="mailto:chefsdu1er@gmail.com">chefsdu1er@gmail.com</a><br>
+		Staff baladins : <a href="mailto:la171255@student.helha.be">la171255@student.helha.be</a> Diego Faingneart<br>
+		Staff louveteaux : <a href="mailto:louvetauxmo001@gmail.com">louvetauxmo001@gmail.com</a><br>
+		Staff éclaireurs : <a href="mailto:baptdelsoir@gmail.com">baptdelsoir@gmail.com</a> <br>
 		Staff pionniers : <a href="mailto:chefsdu1er@gmail.com"> staff.pionnier.7700@gmail.com </a><br>
 	</h3>
 	<h3>
