Dates camp bala

--- a/baladins.html
+++ b/baladins.html
@@ -24,7 +24,7 @@
 		</h3>
 		<p>
 			Camp de Pâques : 3 au 6 avril (clôture des inscriptions le 30 mars) <br>
-			Grand camp : ???
+			Grand camp : 1 au 7 juillet <br>
 		</p>
 		<div class="lienProgramme">
 			<a href="programmes/baladins.jpg" target="_blank">Programme</a>
