--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@
 		<p>
 			Scoutement vôtre
 		</p>
+
 		<h3> Documents :</h3>
-		<a href="paques2018/lettre" target="_blank">Camp de Pâques 2018</a>
-		<a href="paques2018/ficheSanté" target="_blank">Fiche Santé individuelle</a>
+		<a href="paques2018/lettre" target="_blank">Camp de Pâques 2018</a><br>
+		<a href="paques2018/ficheSanté" target="_blank">Fiche Santé individuelle</a><br>
 	</section>
 
 	<footer>
