--- a/baladins.html
+++ b/baladins.html
@@ -18,18 +18,23 @@
 	</nav>
 
 	<h1 class="titre">Baladins</h1>
-	<div class="corps">
+	<section>
 		<h3>
-			Dates clés
+			Dates clés :
 		</h3>
 		<p>
-			Camp de Pâques : 3 au 6 avril (clôture des inscriptions le 30 mars) <br>
-			Grand camp : 1 au 7 juillet <br>
+			Camp de Pâques : 3 au 6 avril (clôture des inscriptions le 30 mars)
 		</p>
+		<p>
+			Grand camp : 1 au 7 juillet
+		</p>
+	</section>
+	<section>
 		<div class="lienProgramme">
 			<a href="programmes/baladins.jpg" target="_blank">Programme</a>
 		</div>
-	</div>
+	</section>
+
 
 	<footer>
 		<a href="mailto:jeanvanneste@gmail.com">Contact webm@aster</a>
