--- a/eclaireurs.html
+++ b/eclaireurs.html
@@ -19,7 +19,7 @@
 	<h1 class="titre">Éclaireurs</h1>
 	
 
-	<div class="corps">
+	<section>
 		<h3>
 			Dates clés :
 		</h3>
@@ -29,11 +29,13 @@
 			Dernière réunion : 6 mai <br>
 			Grand camp : 29 juin au 11 juillet (à confirmer)<br>
 		</p>
+	</section>
+	<section>
 		<div class="lienProgramme">
 			<a href="programmes/eclaireurs.pdf" target="_blank">Programme</a>
 		</div>
 
-	</div>
+	</section>
 
 	<footer>
 		<a href="mailto:jeanvanneste@gmail.com">Contact webm@aster</a>
