--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			Vous trouverez ci-joint la communication relative au camps de Pâques qui se déroulera du 3 au 6 avril prochain.
 		</p>
 		<p>			
-			Les inscriptions se clôtureront le 30 mars et le paiement fera office d'inscription. Veillez également à vous munir de la <strong>carte d'identité</strong> de votre enfant et de <strong>la fiche médicale</strong> ci-jointe dument complétée le jour du départ, faute de quoi nous ne pourrons pas prendre en charge votre enfant.
+			Les inscriptions se clôtureront le 30 mars et le paiement fera office d'inscription. Veillez également à vous munir de la <em>carte d'identité</em> de votre enfant et de <em>la fiche médicale</em> ci-jointe dument complétée le jour du départ, faute de quoi nous ne pourrons pas prendre en charge votre enfant.
 		</p>
 		<p>
 			Le prix du camp n'a pas été majoré par rapport à l'année passée et s'élève à 70 €. Ce montant couvre pour moitié la location de l'endroit de camps et pour l'autre moitié les repas et activités. Nous ne voulons cependant pas que ce coût soit un frein à l'inscription de votre enfant. N'hésitez donc pas à prendre contact avec nous si cela s'avérait limitant. Nous voulons que chaque enfant puisse profiter de ces moments en groupe et de cette expérience.
