--- a/louveteaux.html
+++ b/louveteaux.html
@@ -18,7 +18,7 @@
 
 	<h1 class="titre">Louveteaux</h1>
 
-	<div class="corps">
+	<section>
 
 		<h3>
 			Dates clés :
@@ -28,11 +28,13 @@
 			BeScouts : 21 avril <br>
 			Grand camp : 30 juin au 8 juillet <br>
 		</p>
+	</section>
 		
+	<section>	
 		<div class="lienProgramme">
 			<a href="programmes/louveteaux.pdf" target="_blank">Programme</a>
 		</div>
-	</div>
+	</section>
 
 	<footer>
 		<a href="mailto:jeanvanneste@gmail.com">Contact webm@aster</a>
