--- a/pionniers.html
+++ b/pionniers.html
@@ -18,13 +18,15 @@
 
 	<h1 class="titre">Pionniers</h1>
 
-	<div class="corps">
+	<section>
 		<h2>
 			Dates clefs 2017-2018
 		</h2>
 		<p>
-			Camp de Pâques : 3 au 6 avril <br>
-			BeScouts : 21 avril <br>
+			Camp de Pâques : 3 au 6 avril
+		</p>
+		<p>
+			BeScouts : 21 avril
 		</p>
 		<p>
 			Soirée Ibiza : 23 juin
@@ -32,10 +34,7 @@
 		<p>
 			Camp Roumanie : 17 au 31 juillet
 		</p>
-
-
-	</div>
-
+	</section>
 	<footer>
 		<a href="mailto:jeanvanneste@gmail.com">Contact webm@aster</a>
 	</footer>
