--- a/contact.html
+++ b/contact.html
@@ -21,16 +21,23 @@
 	<div class="corps">
 		<h1 class="titre">Nous contacter</h1>
 
-	<h3>
-		Staff d'unité : <a href="mailto:chefsdu1er@gmail.com">chefsdu1er@gmail.com</a><br>
-		Staff baladins : <a href="mailto:la171255@student.helha.be">la171255@student.helha.be</a> Diego Faingneart<br>
-		Staff louveteaux : <a href="mailto:louvetauxmo001@gmail.com">louvetauxmo001@gmail.com</a><br>
-		Staff éclaireurs : <a href="mailto:baptdelsoir@gmail.com">baptdelsoir@gmail.com</a> <br>
-		Staff pionniers : <a href="mailto:chefsdu1er@gmail.com"> staff.pionnier.7700@gmail.com </a><br>
-	</h3>
-	<h3>
-		Merci de vous référer aux différents programmes pour les numéros de téléphone.
-	</h3>
+		<section>
+			<p>
+				<strong>Staff d'unité : </strong>
+				<a href="mailto:chefsdu1er@gmail.com">chefsdu1er@gmail.com</a><br>
+				<strong>Staff baladins : </strong>
+				<a href="mailto:la171255@student.helha.be">la171255@student.helha.be</a> (Diego Faingneart)<br>
+				<strong>Staff louveteaux : </strong>
+				<a href="mailto:louvetauxmo001@gmail.com">louvetauxmo001@gmail.com</a><br>
+				<strong>Staff éclaireurs : </strong>
+				<a href="mailto:baptdelsoir@gmail.com">baptdelsoir@gmail.com</a> <br>
+				<strong>Staff pionniers : </strong>
+				<a href="mailto:chefsdu1er@gmail.com"> staff.pionnier.7700@gmail.com </a><br>
+			</p>
+			<h3>
+				Merci de vous référer aux différents programmes pour les numéros de téléphone.
+			</h3>
+		</section>
 
 	</div>
 
