--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 				<strong>Staff louveteaux : </strong>
 				<a href="mailto:louvetauxmo001@gmail.com">louvetauxmo001@gmail.com</a><br>
 				<strong>Staff éclaireurs : </strong>
-				<a href="mailto:baptdelsoir@gmail.com">baptdelsoir@gmail.com</a> <br>
+				<a href="mailto:baptdelsoir@gmail.com">baptdelsoir@gmail.com</a> (Baptise Delsoir)<br>
 				<strong>Staff pionniers : </strong>
 				<a href="mailto:chefsdu1er@gmail.com"> staff.pionnier.7700@gmail.com </a><br>
 			</p>
