--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
 		</p>
 
 		<h3> Documents :</h3>
-		<a href="paques2018/lettre" target="_blank">Camp de Pâques 2018</a><br>
-		<a href="paques2018/ficheSanté" target="_blank">Fiche Santé individuelle</a><br>
+		<a href="paques2018/lettre.pdf" target="_blank">Camp de Pâques 2018</a><br>
+		<a href="paques2018/ficheSante.pdf" target="_blank">Fiche Santé individuelle</a><br>
 	</section>
 
 	<footer>
