--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
 	</title>
 	<link href="style.css" type="text/css" rel="stylesheet">
 	<meta charset="UTF-8">
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115866173-1"></script>
+	<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-115866173-1');
+	</script>
+
 </head>
 
 <body>
