--- a/test.html
+++ b/test.html
@@ -3,6 +3,6 @@
 <html>
 <head>
 	<script type="text/javascript">
-		window.location = "http://scoutsPremiere.github.io";
+		window.location = "http://www.google.com";
 	</script>
 </head>
