--- a/index.html
+++ b/index.html
@@ -32,6 +32,30 @@
 
 	<section>
 		<h1>
+			BeScouts
+		</h1>
+
+		<div class="auteur">Jean Vanneste, Collaborateur d'Unité</div>
+		<p>
+			Chers scouts, chers parents,
+		</p>
+
+		<p>
+			Comme vous le savez déjà, les louveteaux, éclaireurs et pionniers partent le WE prochain pour l'évènement BeScouts. Cet évènement rassemblera plus de 25.000 scouts de toute la Wallonie et région Bruxelloise dès le vendredi 20 pour les éclaireurs et les pionniers et toute la journée du 21 avril pour tout le monde.
+		</p>
+
+		<p>
+			Nous vous communiquons les dernières information pour ce WE dans les pages dédiées à chaque section
+		</p>
+
+		<p>
+			Salutations scoutes
+		</p>
+
+	</section>
+
+	<section>
+		<h1>
 			Camp de Pâques
 		</h1>
 		<div class="auteur">Benoit Grymonprez, Animateur d'Unité</div>
