--- a/louveteaux.html
+++ b/louveteaux.html
@@ -19,6 +19,23 @@
 	<h1 class="titre">Louveteaux</h1>
 
 	<section>
+		<h1>
+			Be.Scouts : infos pratiques
+		</h1>
+
+		<h2>
+			Horaires de départ et d'arrivée
+		</h2>
+		<h3>
+			Départ
+		</h3>
+
+		<p>
+			Le trajet aller des louveteaux se fera en car, le rendez-vous à lieu <strong>Rue des Olympiades</strong> (près du Hall Jacky Rousseau) à <strong>7h15</strong>. Merci d'arriver à l'avance afin de pouvoir partir au plus tôt afin de ne pas influer sur le bon déroulement de la journée.
+		</p>
+	</section>
+
+	<section>
 
 		<h3>
 			Dates clés :
@@ -29,7 +46,7 @@
 			Grand camp : 30 juin au 8 juillet <br>
 		</p>
 	</section>
-		
+
 	<section>	
 		<div class="lienProgramme">
 			<a href="programmes/louveteaux.pdf" target="_blank">Programme</a>
