--- a/louveteaux.html
+++ b/louveteaux.html
@@ -31,7 +31,27 @@
 		</h3>
 
 		<p>
-			Le trajet aller des louveteaux se fera en car, le rendez-vous à lieu <strong>Rue des Olympiades</strong> (près du Hall Jacky Rousseau) à <strong>7h15</strong>. Merci d'arriver à l'avance afin de pouvoir partir au plus tôt afin de ne pas influer sur le bon déroulement de la journée.
+			Le trajet aller des louveteaux se fera en car, le rendez-vous à lieu <strong>Rue des Olympiades</strong> (près du Hall Jacky Rousseau) pour un départ à <strong>7h15</strong>. Merci d'arriver à l'avance afin de pouvoir partir au plus tôt afin de ne pas influer sur le bon déroulement de la journée.
+		</p>
+		<p>
+			L'arrivée à Louvain-La-Neuve est prévue à 9h20.
+		</p>
+
+		<h3>Retour</h3>
+
+		<p>
+			Comme l'aller, le retour se fera en car. Ce dernier arrivera <strong>Rue des Olympiades</strong>, même endroit qu'à l'aller, à <strong>20h05</strong>.
+		</p>
+
+		<h2>À emporter</h2>
+		<p>
+			<ul>
+				<li>Un pique-nique (dans une boite à tartine de préférence)</li>
+				<li>Une gourde remplie d'eau</li>
+				<li>Des vêtements adaptés à la météo (dont chapeau si grand soleil)</li>
+				<li>Bonnes chaussures</li>
+				<li>Uniforme et foulard</li>
+			</ul>
 		</p>
 	</section>
 
