--- a/louveteaux.html
+++ b/louveteaux.html
@@ -31,7 +31,7 @@
 		</h3>
 
 		<p>
-			Le trajet aller des louveteaux se fera en car, le rendez-vous à lieu <strong>Rue des Olympiades</strong> (près du Hall Jacky Rousseau) pour un départ à <strong>7h15</strong>. Merci d'arriver à l'avance afin de pouvoir partir au plus tôt afin de ne pas influer sur le bon déroulement de la journée.
+			Le trajet aller des louveteaux se fera en car, le rendez-vous à lieu <strong>Rue des Olympiades</strong> (près du Hall Jacky Rousseau) pour un départ à <strong>7h15</strong> (Car C-603). Merci d'arriver à l'avance afin de pouvoir partir au plus tôt afin de ne pas influer sur le bon déroulement de la journée.
 		</p>
 		<p>
 			L'arrivée à Louvain-La-Neuve est prévue à 9h20.
