--- a/pionniers.html
+++ b/pionniers.html
@@ -19,6 +19,52 @@
 	<h1 class="titre">Pionniers</h1>
 
 	<section>
+		<h1>
+			Be.Scouts : infos pratiques
+		</h1>
+
+		<h2>
+			Horaires de départ et d'arrivée
+		</h2>
+		<h3>
+			Départ
+		</h3>
+
+		<p>
+			Le trajet aller des éclaireurs se fera en car, le rendez-vous à lieu <strong>Rue des Olympiades</strong> (près du Hall Jacky Rousseau) pour un départ <strong>vendredi 20 avril à 17h30</strong> dans le car V-609 (ou V-603 si manque de place, à voir avec Jean qui accompagne).
+			Le car prend doit également prendre des passager à Templeuve et à Celles, il n'attendra donc pas les retardataires. Merci d'arriver à l'avance.
+		</p>
+		<p>
+			L'arrivée à Ottignies-Louvain-la-Neuve est prévue à 20h15.
+		</p>
+
+		<h3>Retour</h3>
+
+		<p>
+			Comme l'aller, le retour se fera en car. Ce dernier arrivera <strong>Rue des Olympiades</strong>, même endroit qu'à l'aller, <strong>samedi 21 avril à 20h05</strong>.
+		</p>
+
+		<h2>À emporter</h2>
+		<p>
+			Dans un sac à dos (#Hike) :
+			<ul>
+				<li>Un pique-nique pour le vendredi soir (dans une boite à tartine #ZéroDéchêts)</li>
+				<li>Une gourde remplie d'eau</li>
+				<li>Des vêtements adaptés à la météo belge</li>
+				<li>De quoi dormir (tente, matelas, sac de couchage)</li>
+				<li>Un gilet fluo</li>
+				<li>Une lampe de poche</li>
+				<li>Bonnes chaussures</li>
+				<li>Uniforme et foulard</li>
+				<li>Si possible, batterie de secours (type solaire ou autre)</li>
+			</ul>
+		</p>
+	</section>
+	
+
+	<section>
+
+	<section>
 		<h2>
 			Dates clefs 2017-2018
 		</h2>
