Correction faute d'orthographe

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 		</p>
 
 		<p>
-			Nous vous communiquons les dernières information pour ce WE dans les pages dédiées à chaque section
+			Nous vous communiquons les dernières informations pour ce WE dans les pages dédiées à chaque section
 		</p>
 
 		<p>
