--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>
 		1ère unité scoute
 	</title>
+	<meta name="google-site-verification" content="aMsuk7Ur5UMYobMWKxAYgcwbEMPWEkniMZRr_y5b6S0" />
 	<link href="style.css" type="text/css" rel="stylesheet">
-	<meta charset="UTF-8">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-115866173-1"></script>
 	<script>
