--- a/index.html
+++ b/index.html
@@ -89,6 +89,7 @@
 
 	<footer>
 		<a href="mailto:jeanvanneste@gmail.com">Contact webm@aster</a>
+        Dernier modification le 2 mai 2018
 	</footer>
 </body>
 
