--- a/index.html
+++ b/index.html
@@ -33,6 +33,47 @@
 
 	<section>
 		<h1>
+			Montée et reprise de l'année
+		</h1>
+
+		<div class="auteur">Jean Vanneste, Collaborateur d'Unité</div>
+		<p>
+			Chers scouts, chers parents, chers animateurs
+		</p>
+
+		<p>
+			Après un été riche en camps et animations, nous sommes heureux de vous annoncer une reprise imminente avec la traditionnelle montée et le passage vers d'autres sections pour les uns, ou de retrouvailles et d'accueils des nouveaux pour les autres.
+		</p>
+
+		<p>
+			Cette année, la montée se déroulera le <strong>samedi 22 septembre 2018</strong>. Rendez vous au <em>local rue du Bas-Voisinage dès 9h</em> pour toutes les sections.
+		</p>
+
+		<p>
+			Merci de prévoir pour le bon déroulement de la journée :
+			<ul>
+				<li>Votre pique-nique pour midi</li>
+				<li>Votre uniforme impeccable et une tenue adaptée aux prévisions météo</li>
+				<li>Votre carte d'identité</li>
+				<li>PAF : Gratuit</li>
+			</ul>
+		</p>
+
+		<p> 
+			Le retour au local est prévu à <strong>17h30</strong>, heure à laquelle vous êtes cordialement invité à participer au traditionnel cérémonial de la montée. Nous en profiterons pour présenter les staffs qui s'occuperont de vos enfants durant toute l'année. Un petit apéro est prévu pour tous, venez nombreux.
+		</p>
+
+		<center><p><strong>Afin de pouvoir organiser au mieux la journée, merci de confirmer la présence de votre/vos enfant(s) à l'adresse mail suivante : <a href="mailto:scoutsmo001@gmail.com">scoutsmo001@gmail.com</a></strong></p></center>
+
+		<p>Salutations scoutes</p>
+
+		<h3>Document</h3>
+		<a href="#">Montée 2018-2019</a>
+
+	</section>
+
+	<section>
+		<h1>
 			BeScouts
 		</h1>
 
@@ -89,7 +130,7 @@
 
 	<footer>
 		<a href="mailto:jeanvanneste@gmail.com">Contact webm@aster</a>
-        Dernier modification le 2 mai 2018
+        Dernière modification le 12 septembre 2018
 	</footer>
 </body>
 
