--- a/index.html
+++ b/index.html
@@ -31,6 +31,14 @@
 
 	<h1 class="titre">Page d'accueil</h1>
 
+	<h2>Dates de l'année</h2>
+	<p>
+		<strong>30 septembre</strong> : Pas de réunion (24h de Mouscron)<br>
+		<strong>Samedi 01 décembre</strong> : Dernière réunion de l'année<br>
+		<strong>30 mars</strong> : Fête d'Unité<br>
+		<strong>9 au 12 avril</strong> : Camp de Pâques
+	</p>
+
 	<section>
 		<h1>
 			Montée et reprise de l'année
@@ -130,7 +138,7 @@
 
 	<footer>
 		<a href="mailto:jeanvanneste@gmail.com">Contact webm@aster</a>
-        Dernière modification le 12 septembre 2018
+		Dernière modification le 12 septembre 2018
 	</footer>
 </body>
 
