Modif mise en page

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 			Le retour au local est prévu à <strong>17h30</strong>, heure à laquelle vous êtes cordialement invité à participer au traditionnel cérémonial de la montée. Nous en profiterons pour présenter les staffs qui s'occuperont de vos enfants durant toute l'année. Un petit apéro est prévu pour tous, venez nombreux.
 		</p>
 
-		<center><p><strong>Afin de pouvoir organiser au mieux la journée, merci de confirmer la présence de votre/vos enfant(s) à l'adresse mail suivante : <a href="mailto:scoutsmo001@gmail.com">scoutsmo001@gmail.com</a></strong></p></center>
+		<center><p><strong>Afin de pouvoir organiser au mieux la journée, merci de confirmer la présence de votre/vos enfant(s) à l'adresse mail suivante :</strong> <a href="mailto:scoutsmo001@gmail.com">scoutsmo001@gmail.com</a></p></center>
 
 		<p>Salutations scoutes</p>
 
