--- a/baladins.html
+++ b/baladins.html
@@ -19,19 +19,8 @@
 
 	<h1 class="titre">Baladins</h1>
 	<section>
-		<h2>
-			Dates clés :
-		</h2>
-		<p>
-			Camp de Pâques : 3 au 6 avril (clôture des inscriptions le 30 mars)
-		</p>
-		<p>
-			Grand camp : 1 au 7 juillet
-		</p>
-	</section>
-	<section>
 		<div class="lienProgramme">
-			<a href="programmes/baladins.jpg" target="_blank">Programme</a>
+			<a href="programmes/2018-2019/baladinsQ1.pdf" target="_blank">Programme</a>
 		</div>
 	</section>
 
