--- a/index.html
+++ b/index.html
@@ -40,6 +40,25 @@
 	</p>
 
 	<section>
+		<h1>Reprise des réunions</h1>
+		<div class="auteur">Jean Vanneste, Collaborateur d'Unité</div>
+		<p>
+			Chers scouts, chers parents,
+		</p>
+		<p>
+			Après cette montée qui aura permis de clôturer en beauté l'année 2017-2018, il est temps de se préparer pour cette nouvelle année scoute. Les staffs ont travaillé à vous élaborer un programme bien ficelé pour le premier semestre. Vous pouvez retrouver le programme détaillé dans les pages consacrées à chaque section.
+		</p>
+		<p> 
+		Notez déjà que les chefs baladins, louveteaux et éclaireurs vous attendent le dimanche 7 octobre pour la première réunion à 9h30 pile. </p>
+		<p>
+			Salutations scoutes,
+		</p>
+		<p>
+			Jean Vanneste
+		</p>
+	</section>
+
+	<section>
 		<h1>
 			Montée et reprise de l'année
 		</h1>
@@ -80,65 +99,9 @@
 
 	</section>
 
-	<section>
-		<h1>
-			BeScouts
-		</h1>
-
-		<div class="auteur">Jean Vanneste, Collaborateur d'Unité</div>
-		<p>
-			Chers scouts, chers parents,
-		</p>
-
-		<p>
-			Comme vous le savez déjà, les louveteaux, éclaireurs et pionniers partent le WE prochain pour l'évènement BeScouts. Cet évènement rassemblera plus de 25.000 scouts de toute la Wallonie et région Bruxelloise dès le vendredi 20 pour les éclaireurs et les pionniers et toute la journée du 21 avril pour tout le monde.
-		</p>
-
-		<p>
-			Nous vous communiquons les dernières informations pour ce WE dans les pages dédiées à chaque section
-		</p>
-
-		<p>
-			Salutations scoutes
-		</p>
-
-	</section>
-
-	<section>
-		<h1>
-			Camp de Pâques
-		</h1>
-		<div class="auteur">Benoit Grymonprez, Animateur d'Unité</div>
-		<p>
-			Chers scouts, chers parents, chers amis,
-		</p>
-		<p>
-			Vous trouverez ci-joint la communication relative au camps de Pâques qui se déroulera du 3 au 6 avril prochain.
-		</p>
-		<p>			
-			Les inscriptions se clôtureront le 30 mars et le paiement fera office d'inscription. Veillez également à vous munir de la <em>carte d'identité</em> de votre enfant et de <em>la fiche médicale</em> ci-jointe dument complétée le jour du départ, faute de quoi nous ne pourrons pas prendre en charge votre enfant.
-		</p>
-		<p>
-			Le prix du camp n'a pas été majoré par rapport à l'année passée et s'élève à 70 €. Ce montant couvre pour moitié la location de l'endroit de camps et pour l'autre moitié les repas et activités. Nous ne voulons cependant pas que ce coût soit un frein à l'inscription de votre enfant. N'hésitez donc pas à prendre contact avec nous si cela s'avérait limitant. Nous voulons que chaque enfant puisse profiter de ces moments en groupe et de cette expérience.
-		</p>
-		<p>
-			Enfin, nous ferons également appel aux bonnes volontés pour le convoyage de nos scouts le jour de départ comme au retour. L'endroit est situé à Wodecq (près de Flobecq). N'hésitez donc pas à nous signifier votre disponibilité ainsi que le nombre de places disponibles par retour de mail sur cette adresse.
-		</p>
-		<p>
-			En espérant vous voir nombreux !
-		</p>
-		<p>
-			Scoutement vôtre
-		</p>
-
-		<h3> Documents :</h3>
-		<a href="paques2018/lettre.pdf" target="_blank">Camp de Pâques 2018</a><br>
-		<a href="paques2018/ficheSante.pdf" target="_blank">Fiche Santé individuelle</a><br>
-	</section>
-
 	<footer>
 		<a href="mailto:jeanvanneste@gmail.com">Contact webm@aster</a>
-		Dernière modification le 12 septembre 2018
+		Dernière modification le 29 septembre 2018
 	</footer>
 </body>
 
