--- a/louveteaux.html
+++ b/louveteaux.html
@@ -18,58 +18,9 @@
 
 	<h1 class="titre">Louveteaux</h1>
 
-	<section>
-		<h1>
-			Be.Scouts : infos pratiques
-		</h1>
-
-		<h2>
-			Horaires de départ et d'arrivée
-		</h2>
-		<h3>
-			Départ
-		</h3>
-
-		<p>
-			Le trajet aller des louveteaux se fera en car, le rendez-vous à lieu <strong>Rue des Olympiades</strong> (près du Hall Jacky Rousseau) pour un départ à <strong>7h15</strong> (Car C-603). Merci d'arriver à l'avance afin de pouvoir partir au plus tôt afin de ne pas influer sur le bon déroulement de la journée.
-		</p>
-		<p>
-			L'arrivée à Louvain-la-Neuve est prévue à 9h20.
-		</p>
-
-		<h3>Retour</h3>
-
-		<p>
-			Comme l'aller, le retour se fera en car. Ce dernier arrivera <strong>Rue des Olympiades</strong>, même endroit qu'à l'aller, à <strong>20h05</strong>.
-		</p>
-
-		<h2>À emporter</h2>
-		<p>
-			<ul>
-				<li>Un pique-nique (dans une boite à tartine de préférence)</li>
-				<li>Une gourde remplie d'eau</li>
-				<li>Des vêtements adaptés à la météo (dont chapeau si grand soleil)</li>
-				<li>Bonnes chaussures</li>
-				<li>Uniforme et foulard</li>
-			</ul>
-		</p>
-	</section>
-
-	<section>
-
-		<h3>
-			Dates clés :
-		</h3>
-		<p>
-			Camps de Pâques : 2 au 6 avril (Clôture des inscriptions le 30 mars) <br>
-			BeScouts : 21 avril <br>
-			Grand camp : 30 juin au 8 juillet <br>
-		</p>
-	</section>
-
 	<section>	
 		<div class="lienProgramme">
-			<a href="programmes/louveteaux.pdf" target="_blank">Programme</a>
+			<a href="programmes/2018-2019/loupsQ1temp.pdf" target="_blank">Programme</a>
 		</div>
 	</section>
 
