--- a/baladins.html
+++ b/baladins.html
@@ -20,7 +20,7 @@
 	<h1 class="titre">Baladins</h1>
 	<section>
 		<div class="lienProgramme">
-			<a href="programmes/2018-2019/baladinsQ1.pdf" target="_blank">Programme</a>
+			<a href="programmes/2018-2019/baladinsQ1.pdf" target="_blank">Programme 1er semestre 2018-2019</a>
 		</div>
 	</section>
 
