--- a/louveteaux.html
+++ b/louveteaux.html
@@ -20,7 +20,7 @@
 
 	<section>	
 		<div class="lienProgramme">
-			<a href="programmes/2018-2019/loupsQ1temp.pdf" target="_blank">Programme</a>
+			<a href="programmes/2018-2019/loupsQ1temp.pdf" target="_blank">Programme 1er semestre 2018-2019</a>
 		</div>
 	</section>
 
