Correction adresse mail

--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
 		<section>
 			<p>
 				<strong>Staff d'unité : </strong>
-				<a href="mailto:chefsdu1er@gmail.com">chefsdu1er@gmail.com</a><br>
+				<a href="mailto:chefdu1er@gmail.com">chefsdu1er@gmail.com</a><br>
 				<strong>Staff baladins : </strong>
 				<a href="mailto:la171255@student.helha.be">la171255@student.helha.be</a> (Diego Faingneart)<br>
 				<strong>Staff louveteaux : </strong>
