Ajout fiche d'inscription + cotisation

--- a/index.html
+++ b/index.html
@@ -38,7 +38,11 @@
 		<strong>30 mars</strong> : Fête d'Unité<br>
 		<strong>9 au 12 avril</strong> : Camp de Pâques
 	</p>
-
+	<h2>Documents importants :
+	<p>
+		<a href="2018-2019/inscription.pdf" target="_blank">Fiche d'inscription</a>
+		<a href="2018-2019/cotisation.pdf" target="_blank">Informations sur les cotisations</a>
+	</p>
 	<section>
 		<h1>Reprise des réunions</h1>
 		<div class="auteur">Jean Vanneste, Collaborateur d'Unité</div>
@@ -48,7 +52,7 @@
 		<p>
 			Après cette montée qui aura permis de clôturer en beauté l'année 2017-2018, il est temps de se préparer pour cette nouvelle année scoute. Les staffs ont travaillé à vous élaborer un programme bien ficelé pour le premier semestre. Vous pouvez retrouver le programme détaillé dans les pages consacrées à chaque section.
 		</p>
-		<p> 
+		<p>
 		Notez déjà que les chefs baladins, louveteaux et éclaireurs vous attendent le dimanche 7 octobre pour la première réunion à 9h30 pile. </p>
 		<p>
 			Salutations scoutes,
@@ -86,7 +90,7 @@
 			</ul>
 		</p>
 
-		<p> 
+		<p>
 			Le retour au local est prévu à <strong>17h30</strong>, heure à laquelle vous êtes cordialement invité à participer au traditionnel cérémonial de la montée. Nous en profiterons pour présenter les staffs qui s'occuperont de vos enfants durant toute l'année. Un petit apéro est prévu pour tous, venez nombreux.
 		</p>
 
