--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
 		<a href="contact.html" class="button">Contact</a>
 	</nav>
 
-	
+
 
 	<div class="corps">
 		<h1 class="titre">Nous contacter</h1>
@@ -24,7 +24,7 @@
 		<section>
 			<p>
 				<strong>Staff d'unité : </strong>
-				<a href="mailto:chefdu1er@gmail.com">chefsdu1er@gmail.com</a><br>
+				<a href="mailto:chefdu1er@gmail.com">chefdu1er@gmail.com</a><br>
 				<strong>Staff baladins : </strong>
 				<a href="mailto:la171255@student.helha.be">la171255@student.helha.be</a> (Diego Faingneart)<br>
 				<strong>Staff louveteaux : </strong>
