--- a/index.html
+++ b/index.html
@@ -39,9 +39,8 @@
 		<strong>9 au 12 avril</strong> : Camp de Pâques
 	</p>
 	<h2>Documents importants :
-	<p>
-		<a href="2018-2019/inscription.pdf" target="_blank">Fiche d'inscription</a>
-		<a href="2018-2019/cotisation.pdf" target="_blank">Informations sur les cotisations</a>
+	<p><a href="2018-2019/inscription.pdf" target="_blank">Fiche d'inscription</a></p>
+	<p><a href="2018-2019/cotisation.pdf" target="_blank">Informations sur les cotisations</a></p>
 	</p>
 	<section>
 		<h1>Reprise des réunions</h1>
