--- a/index.html
+++ b/index.html
@@ -38,10 +38,9 @@
 		<strong>30 mars</strong> : Fête d'Unité<br>
 		<strong>9 au 12 avril</strong> : Camp de Pâques
 	</p>
-	<h2>Documents importants :
+	<h2>Documents importants :</h2>
 	<p><a href="2018-2019/inscription.pdf" target="_blank">Fiche d'inscription</a></p>
 	<p><a href="2018-2019/cotisation.pdf" target="_blank">Informations sur les cotisations</a></p>
-	</p>
 	<section>
 		<h1>Reprise des réunions</h1>
 		<div class="auteur">Jean Vanneste, Collaborateur d'Unité</div>
