Date reprise baladins + programme Q2

--- a/baladins.html
+++ b/baladins.html
@@ -18,9 +18,19 @@
 	</nav>
 
 	<h1 class="titre">Baladins</h1>
+
+	<section>
+		<h2>Reprise des réunions</h2>
+		<div class="auteur">Jean Vanneste, Collaborateur d'Unité</div>
+		<p>
+			Nous avons le plaisir de vous annoncer la reprises des réunions baladins le 3 février. <br />
+			Vous êtes attendu nombreux et en pleine forme.
+		</p>
+	</section>
+
 	<section>
 		<div class="lienProgramme">
-			<a href="programmes/2018-2019/baladinsQ1.pdf" target="_blank">Programme 1er semestre 2018-2019</a>
+			<a href="programmes/2018-2019/baladinsQ2.pdf" target="_blank">Programme 2eme semestre 2018-2019</a>
 		</div>
 	</section>
 
