Ajout dates reprise

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 	<p>
 		<strong>30 septembre</strong> : Pas de réunion (24h de Mouscron)<br>
 		<strong>Samedi 01 décembre</strong> : Dernière réunion de l'année<br>
+		<strong>Dimanche 03 février</strong> : Reprise des réunions<br />
 		<strong>30 mars</strong> : Fête d'Unité<br>
 		<strong>9 au 12 avril</strong> : Camp de Pâques
 	</p>
