--- a/louveteaux.html
+++ b/louveteaux.html
@@ -19,6 +19,15 @@
 	<h1 class="titre">Louveteaux</h1>
 
 	<section>
+		<h2>Reprise des réunions</h2>
+		<div class="auteur">Jean Vanneste, Collaborateur d'Unité</div>
+		<p>
+			Nous avons le plaisir de vous annoncer la reprises des réunions louveteaux le 3 février. <br />
+			Vous êtes attendu nombreux et en pleine forme.
+		</p>
+	</section>
+
+	<section>
 		<div class="lienProgramme">
 			<a href="programmes/2018-2019/loupsQ1.pdf" target="_blank">Programme 1er semestre 2018-2019</a>
 		</div>
