Info camp Pâques

--- a/index.html
+++ b/index.html
@@ -40,8 +40,34 @@
 		<strong>9 au 12 avril</strong> : Camp de Pâques
 	</p>
 	<h2>Documents importants :</h2>
-	<p><a href="2018-2019/inscription.pdf" target="_blank">Fiche d'inscription</a><br />
-		<a href="2018-2019/cotisation.pdf" target="_blank">Informations sur les cotisations</a></p>
+	<p>
+		<a href="2018-2019/inscription.pdf" target="_blank">Fiche d'inscription</a><br />
+		<a href="2018-2019/cotisation.pdf" target="_blank">Informations sur les cotisations</a>
+	</p>
+	<section>
+		<h1>Camp de Pâques 2019</h1>
+		<p>
+			Chers parents, chers scouts,
+		</p>
+		<p>
+			Vous trouverez en pièces jointes les informations relatives au camp de Pâques qui approche à grands pas. N'oubliez pas de compléter et remettre la fiche santé également jointe le jour du départ. Les inscriptions seront clôturées le dimanche 31 mars.
+		</p>
+		<p>
+			J'en profite pour rappeler aux derniers amateurs que les inscriptions pour la fête d'unité se clôtureront le 10 mars prochain, soit dans 5 jours. Il y a encore de la place, il est donc temps de vous manifester…
+		</p>
+		<p>
+			Merci pour votre confiance et au plaisir de vous revoir le 30 mars ou au camp de Pâques.
+		</p>
+		<p>
+			Pour l'unité
+		</p>
+		<p>
+			Tisserin (Benoît), Animateur d'Unité
+		</p>
+		<p>
+			<a href="2018-2019/Paques.pdf" target="_blank">Fiche info</a><br />
+			<a href="2018-2019/Fiche_sante_individuelle_formulaire.pdf" target="_blank">Fiche santé</a>
+		</section>
 	<section>
 		<h1>Reprise des réunions</h1>
 		<div class="auteur">Jean Vanneste, Collaborateur d'Unité</div>
