Mise à jour contenu

--- a/index.html
+++ b/index.html
@@ -33,17 +33,41 @@
 
 	<h2>Dates de l'année</h2>
 	<p>
-		<strong>30 septembre</strong> : Pas de réunion (24h de Mouscron)<br>
-		<strong>Samedi 01 décembre</strong> : Dernière réunion de l'année<br>
-		<strong>Dimanche 03 février</strong> : Reprise des réunions<br />
-		<strong>30 mars</strong> : Fête d'Unité<br>
-		<strong>9 au 12 avril</strong> : Camp de Pâques
+		<strong>14 septembre</strong> : Montée<br />
+		<strong>29 septembre</strong> : Pas de réunion (24h de Mouscron)<br />
 	</p>
 	<h2>Documents importants :</h2>
 	<p>
-		<a href="2018-2019/inscription.pdf" target="_blank">Fiche d'inscription</a><br />
-		<a href="2018-2019/cotisation.pdf" target="_blank">Informations sur les cotisations</a>
+		<a href="2019-2020/inscription.pdf" target="_blank">Fiche d'inscription</a><br />
+		<a href="2019-2020/cotisation.pdf" target="_blank">Informations sur les cotisations</a>
 	</p>
+	<section>
+		<h1>Reprise de l'année</h1>
+		<p>
+			Chers scouts, chers parents, chers amis,
+		</p>
+		<p>
+			Nous vous délivrons les informations relatives à la <strong>montée</strong> qui se déroulera le <em>14 septembre</em> prochain. Nous vous demandons de bien vouloir confirmer la présence de votre ou vos enfant(s) à l'adresse scoutsmo001@gmail.com, et ce, pour le <em>8 septembre au plus tard</em>, afin de nous permettre d'organiser au mieux cette journée. Un grand merci d'avance.
+		</p>
+		<p>
+			Un second document explique les <strong>cotisations</strong> et les instructions de paiement. Nous vous laissons définir votre niveau de cotisation suivant votre situation familiale (plusieurs adhérents, fille chez les guides GCB...). Si vous avez des questions, n'hésitez pas à nous revenir. Les cotisations seront dues pour <em>le 15 octobre prochain</em>. A titre informatif, 85 % de la cotisation que vous paierez sont uniquement destinés à l'assurance couvrant nos scouts pendant les différentes activités organisées.
+		</p>
+		<p>
+			Enfin, la <strong>fiche d'insription</strong> que nous demandons de compléter pour <em>les nouveaux animés</em>, afin de nous permettre de vous communiquer toutes les informations utilessans souci.
+		</p>
+		<p>
+			Nous vous souhaitons une excellente rentrée !
+		</p>
+		<p>
+			Le staff d'Unité
+		</p>
+		<p>
+			(Xavier, Benoit et Jean)
+		</p>
+		<p>
+			<a href="2019-2020/montee.pdf" target="_blank">Montée</a>
+		</p>
+	</section>
 	<section>
 		<h1>Camp de Pâques 2019</h1>
 		<p>
@@ -67,7 +91,8 @@
 		<p>
 			<a href="2018-2019/Paques.pdf" target="_blank">Fiche info</a><br />
 			<a href="2018-2019/Fiche_sante_individuelle_formulaire.pdf" target="_blank">Fiche santé</a>
-		</section>
+		</p>
+	</section>
 	<section>
 		<h1>Reprise des réunions</h1>
 		<div class="auteur">Jean Vanneste, Collaborateur d'Unité</div>
@@ -130,7 +155,7 @@
 
 	<footer>
 		<a href="mailto:jeanvanneste@gmail.com">Contact webm@aster</a>
-		Dernière modification le 29 septembre 2018
+		Dernière modification le 8 septembre 2019
 	</footer>
 </body>
 
