--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			(Xavier, Benoit et Jean)
 		</p>
 		<p>
-			<a href="2019-2020/montee.pdf" target="_blank">Montée</a>
+			<a href="2019-2020/montee.pdf" target="_blank">Montée 2019-2020</a>
 		</p>
 	</section>
 	<section>
