Dates de l'année

--- a/index.html
+++ b/index.html
@@ -31,10 +31,13 @@
 
 	<h1 class="titre">Page d'accueil</h1>
 
-	<h2>Dates de l'année</h2>
+	<h2>Dates à retenir</h2>
 	<p>
 		<strong>14 septembre</strong> : Montée<br />
 		<strong>29 septembre</strong> : Pas de réunion (24h de Mouscron)<br />
+		<strong>8 décembre</strong> : Visite spéciale<br />
+		<strong>14 mars</strong> : Fête d'Unité<br />
+		<strong>Du 10 au 12 avril</strong> : Fête de Pâques<br />
 	</p>
 	<h2>Documents importants :</h2>
 	<p>
